--- a/index.html
+++ b/index.html
@@ -245,6 +245,13 @@
         </div>
 
     </div>
+    <div id="small-screen-overlay">
+      <div class="overlay-content">
+        <h1>:(</h1>
+        <p>This app requires a larger screen.<br>
+        Please use a tablet or desktop.</p>
+      </div>
+    </div>
 
 
     <script src="js/functions.js"></script>
